--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "description": "Server for Geistesblitz game",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "express": "^4.17.3",
-      "body-parser": "^1.19.1",
-      "aws-sdk": "^2.1103.0",
-      "dotenv": "^10.0.0"
+        "@aws-sdk/client-s3": "^3.645.0",
+        "body-parser": "^1.19.1",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.3"
     },
     "devDependencies": {
-      "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15"
     }
   }
   
